--- a/Hospital.Infrastructure/Hospital.Infrastructure.csproj
+++ b/Hospital.Infrastructure/Hospital.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Hospital.Application\Hospital.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.31" />
+  </ItemGroup>
+
 </Project>
