--- a/Hospital.Api/appsettings.json
+++ b/Hospital.Api/appsettings.json
@@ -17,7 +17,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RootDatabase": "Data Source=DESKTOP-QF3AD8D;Initial Catalog=hospital_dbv2;User ID=tungtam;Password=haiyen2612;Trust Server Certificate=True"
+    "RootDatabase": "Data Source=DESKTOP-QF3AD8D;Initial Catalog=hospital_dbv2;User ID=tungtam;Password=haiyen2612;Trust Server Certificate=True",
+    "HangFireDatabase": "Data Source=DESKTOP-QF3AD8D;Initial Catalog=hospital_hangfire;User ID=tungtam;Password=haiyen2612;Trust Server Certificate=True"
   },
   "Auth": {
     "JwtSettings": {
