--- a/Hospital.ShareKernel/Hospital.SharedKernel.csproj
+++ b/Hospital.ShareKernel/Hospital.SharedKernel.csproj
@@ -13,6 +13,9 @@
 		<PackageReference Include="Dapper" Version="2.0.123" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.0.0" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.0.0" />
+		<PackageReference Include="Hangfire" Version="1.8.20" />
+		<PackageReference Include="Hangfire.AspNetCore" Version="1.8.20" />
+		<PackageReference Include="Hangfire.SqlServer" Version="1.8.20" />
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
 		<PackageReference Include="IdGen" Version="3.0.3" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3" />
