--- a/Hospital.Api/appsettings.json
+++ b/Hospital.Api/appsettings.json
@@ -66,6 +66,14 @@
       "VNPTmnCode": "0F3GVZ9P",
       "VNPHashSecret": "TYO8Y1CYUY4VDXTW8E4807RCSST1DZ15",
       "VNPReturnUrl": "https://localhost:4200/ket-qua-thanh-toan"
+    },
+    "MomoAPI": {
+      "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
+      "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
+      "AccessKey": "F8BBA842ECF85",
+      "ReturnUrl": "https://localhost:4200/ket-qua-thanh-toan",
+      "PartnerCode": "MOMO",
+      "RequestType": "captureMoMoWallet"
     }
   },
   "TimeZoneId": "SE Asia Standard Time"
